# wslp

./: .gitignore  README.md  deploy.sh  flag1.txt  flag2.1.txt  flag2.2.txt  flag2.txt  run.sh
anon_overlayfs/: Cargo.toml  README.md  version.rs
anon_overlayfs/src/: delta.rs  main.rs
busybox/: .gitignore  busybox.config
containerd/: main.c
exp/: .gitignore  Makefile  exp.py  idle.c  shell.c  vm_sockets.h  wsl.c
server/: Cargo.toml  README.md  log.yaml  passwd
server/bins/sku_setup/: Cargo.toml  exp.py  flag1.txt
server/bins/sku_setup/src/: instances.rs  main.rs  vmm.rs  wmi_ext.rs
server/crates/powershell-script/: Cargo.toml  README.md
server/crates/powershell-script/examples/create_shortcut/: main.rs
server/crates/powershell-script/examples/hello/: main.rs
server/crates/powershell-script/src/: builder.rs  error.rs  lib.rs  output.rs  psscript.rs  target.rs
server/crates/powershell-script/tests/hello/: main.rs
server/src/: main.rs  sess.rs  utils.rs  vmm.rs  vmm_async.rs  wmi_ext.rs
serverlite/: Cargo.toml  README.md
serverlite/src/: main.rs  sess.rs  utils.rs
sku/: README.md  install.ps1  install.sh  install_specialize.ps1  install_user.ps1  setup.ps1  unattend.xml
sku/efi/: README.txt
sku/efi/EFI/Boot/: bootx64.efi
sku/efi/EFI/Rufus/: ntfs_x64.efi
wsl/: README.md  build.sh  run.sh  run_shared.sh
wsl/busybox/: Makefile  install.patch
wsl/containerd/: Makefile  main.c
wsl/runner/: Makefile  runner  runner.c
