[package]
name = "anon-overlayfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytemuck = { version = "1.18.0", features = ["derive"] }
clap = { version = "4.5.19", features = ["derive"] }
ctrlc = "3.4.5"
dokan = "0.3.1"
dokan-sys = "0.3.1"
fs2 = "0.4.3"
lru = "0.12.5"
tempfile = "3.13.0"
widestring = "0.4.3"
winapi = "0.3.9"
