[package]
name = "serverlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
#gmp-mpfr-sys = { version = "*", features = [ "force-cross" ] }
serde = { version = "1.0.210", features = ["derive"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
